# align

./: CHANGELOG.md  LICENSE  README  align.cabal  stack.yaml
src/Data/: Align.hs
src/Data/Align/: Demo.hs  Text.hs  Types.hs
