name:                align
version:             0.2
synopsis:            Sequence alignment algorithms.
description:         Global or local sequence alignment, not exclusively for text.
license:             BSD3
license-file:        LICENSE
author:              Robin Palotai
maintainer:          palotai.robin@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/robinp/align.git

library
  exposed-modules:     Data.Align,
                       Data.Align.Text,
                       Data.Align.Demo
  other-modules:       Data.Align.Types
  build-depends:       base >=4.6 && <5,
                       containers,
                       text,
                       transformers,
                       vector >=0.10
  hs-source-dirs:      src
  default-language:    Haskell98
  ghc-options:         -Wall
